[gd_scene load_steps=11 format=2]

[ext_resource path="res://TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objetos/Boton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objetos/Puerta.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objetos/plataforma.tscn" type="PackedScene" id=5]
[ext_resource path="res://nivel/Nivel3/Nivel3.tscn" type="PackedScene" id=6]
[ext_resource path="res://nivel/Nivel.gd" type="Script" id=7]
[ext_resource path="res://Objetos/Daño/Daño.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.0461, 6.46326 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Nivel2" type="Node2D"]
script = ExtResource( 7 )
cantDeClones = 1

[node name="Fondo" type="ColorRect" parent="."]
margin_left = 12.1988
margin_top = 4.15109
margin_right = 575.199
margin_bottom = 627.151
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 1 )]
collision_mask = 1
tile_data = PoolIntArray( 0, 4, 0, 29, 3, 0, 30, 8, 0, 31, 8, 0, 32, 8, 0, 33, 8, 0, 34, 8, 0, 35, 4, 0, 65536, 4, 0, 65565, 3, 0, 65566, 8, 0, 65567, 8, 0, 65568, 8, 0, 65569, 8, 0, 65570, 8, 0, 65571, 4, 0, 131072, 4, 0, 131101, 3, 0, 131102, 8, 0, 131103, 8, 0, 131104, 8, 0, 131105, 8, 0, 131106, 8, 0, 131107, 4, 0, 196608, 4, 0, 196637, 3, 0, 196638, 8, 0, 196639, 8, 0, 196640, 8, 0, 196641, 8, 0, 196642, 8, 0, 196643, 4, 0, 262144, 4, 0, 262173, 3, 0, 262174, 8, 0, 262175, 8, 0, 262176, 8, 0, 262177, 8, 0, 262178, 8, 0, 262179, 4, 0, 327680, 4, 0, 327709, 3, 0, 327710, 8, 0, 327711, 8, 0, 327712, 8, 0, 327713, 8, 0, 327714, 8, 0, 327715, 4, 0, 393216, 4, 0, 393245, 3, 0, 393246, 8, 0, 393247, 8, 0, 393248, 8, 0, 393249, 8, 0, 393250, 8, 0, 393251, 4, 0, 458752, 4, 0, 458781, 3, 0, 458782, 8, 0, 458783, 8, 0, 458784, 8, 0, 458785, 8, 0, 458786, 8, 0, 458787, 4, 0, 524288, 4, 0, 524317, 3, 0, 524318, 8, 0, 524319, 8, 0, 524320, 8, 0, 524321, 8, 0, 524322, 8, 0, 524323, 4, 0, 589824, 4, 0, 589853, 3, 0, 589854, 8, 0, 589855, 8, 0, 589856, 8, 0, 589857, 8, 0, 589858, 8, 0, 589859, 4, 0, 655360, 4, 0, 655389, 3, 0, 655390, 8, 0, 655391, 8, 0, 655392, 8, 0, 655393, 8, 0, 655394, 8, 0, 655395, 4, 0, 720896, 4, 0, 720925, 3, 0, 720926, 8, 0, 720927, 8, 0, 720928, 8, 0, 720929, 8, 0, 720930, 8, 0, 720931, 4, 0, 786432, 4, 0, 786461, 3, 0, 786462, 8, 0, 786463, 8, 0, 786464, 8, 0, 786465, 8, 0, 786466, 8, 0, 786467, 4, 0, 851968, 4, 0, 851997, 3, 0, 851998, 8, 0, 851999, 8, 0, 852000, 8, 0, 852001, 8, 0, 852002, 8, 0, 852003, 4, 0, 917504, 4, 0, 917533, 3, 0, 917534, 8, 0, 917535, 8, 0, 917536, 8, 0, 917537, 8, 0, 917538, 8, 0, 917539, 4, 0, 983040, 4, 0, 983069, 3, 0, 983070, 8, 0, 983071, 8, 0, 983072, 8, 0, 983073, 8, 0, 983074, 8, 0, 983075, 4, 0, 1048576, 4, 0, 1048605, 3, 0, 1048606, 8, 0, 1048607, 8, 0, 1048608, 8, 0, 1048609, 8, 0, 1048610, 8, 0, 1048611, 4, 0, 1114112, 4, 0, 1114141, 3, 0, 1114142, 8, 0, 1114143, 8, 0, 1114144, 8, 0, 1114145, 8, 0, 1114146, 8, 0, 1114147, 4, 0, 1179648, 4, 0, 1179677, 3, 0, 1179678, 8, 0, 1179679, 8, 0, 1179680, 8, 0, 1179681, 8, 0, 1179682, 8, 0, 1179683, 4, 0, 1245184, 4, 0, 1245213, 3, 0, 1245214, 8, 0, 1245215, 8, 0, 1245216, 8, 0, 1245217, 8, 0, 1245218, 8, 0, 1245219, 4, 0, 1310720, 4, 0, 1310749, 3, 0, 1310750, 8, 0, 1310751, 8, 0, 1310752, 8, 0, 1310753, 8, 0, 1310754, 8, 0, 1310755, 4, 0, 1376256, 4, 0, 1376285, 3, 0, 1376286, 8, 0, 1376287, 8, 0, 1376288, 8, 0, 1376289, 8, 0, 1376290, 8, 0, 1376291, 4, 0, 1441792, 4, 0, 1441815, 0, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 8, 0, 1441822, 8, 0, 1441823, 8, 0, 1441824, 8, 0, 1441825, 8, 0, 1441826, 8, 0, 1441827, 4, 0, 1507328, 4, 0, 1507351, 3, 0, 1507352, 8, 0, 1507353, 8, 0, 1507354, 8, 0, 1507355, 8, 0, 1507356, 8, 0, 1507357, 8, 0, 1507358, 8, 0, 1507359, 8, 0, 1507360, 8, 0, 1507361, 8, 0, 1507362, 8, 0, 1507363, 4, 0, 1572864, 4, 0, 1572887, 3, 0, 1572888, 8, 0, 1572889, 8, 0, 1572890, 8, 0, 1572891, 8, 0, 1572892, 8, 0, 1572893, 8, 0, 1572894, 8, 0, 1572895, 8, 0, 1572896, 8, 0, 1572897, 8, 0, 1572898, 8, 0, 1572899, 4, 0, 1638400, 4, 0, 1638423, 3, 0, 1638424, 8, 0, 1638425, 8, 0, 1638426, 8, 0, 1638427, 8, 0, 1638428, 8, 0, 1638429, 8, 0, 1638430, 8, 0, 1638431, 8, 0, 1638432, 8, 0, 1638433, 8, 0, 1638434, 8, 0, 1638435, 4, 0, 1703936, 4, 0, 1703959, 3, 0, 1703960, 8, 0, 1703961, 8, 0, 1703962, 8, 0, 1703963, 8, 0, 1703964, 8, 0, 1703965, 8, 0, 1703966, 8, 0, 1703967, 8, 0, 1703968, 8, 0, 1703969, 8, 0, 1703970, 8, 0, 1703971, 4, 0, 1769472, 4, 0, 1769495, 3, 0, 1769496, 8, 0, 1769497, 8, 0, 1769498, 8, 0, 1769499, 8, 0, 1769500, 8, 0, 1769501, 8, 0, 1769502, 8, 0, 1769503, 8, 0, 1769504, 8, 0, 1769505, 8, 0, 1769506, 8, 0, 1769507, 4, 0, 1835008, 4, 0, 1835031, 3, 0, 1835032, 8, 0, 1835033, 8, 0, 1835034, 8, 0, 1835035, 8, 0, 1835036, 8, 0, 1835037, 8, 0, 1835038, 8, 0, 1835039, 8, 0, 1835040, 8, 0, 1835041, 8, 0, 1835042, 8, 0, 1835043, 4, 0, 1900544, 4, 0, 1900567, 3, 0, 1900568, 8, 0, 1900569, 8, 0, 1900570, 8, 0, 1900571, 8, 0, 1900572, 8, 0, 1900573, 8, 0, 1900574, 8, 0, 1900575, 8, 0, 1900576, 8, 0, 1900577, 8, 0, 1900578, 8, 0, 1900579, 4, 0, 1966080, 8, 0, 1966081, 1, 0, 1966082, 1, 0, 1966083, 1, 0, 1966084, 1, 0, 1966085, 1, 0, 1966086, 1, 0, 1966087, 1, 0, 1966088, 2, 0, 1966094, 0, 0, 1966095, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0, 1966101, 1, 0, 1966102, 1, 0, 1966103, 8, 0, 1966104, 8, 0, 1966105, 8, 0, 1966106, 8, 0, 1966107, 8, 0, 1966108, 8, 0, 1966109, 8, 0, 1966110, 8, 0, 1966111, 8, 0, 1966112, 8, 0, 1966113, 8, 0, 1966114, 8, 0, 1966115, 4, 0, 2031616, 8, 0, 2031617, 8, 0, 2031618, 8, 0, 2031619, 8, 0, 2031620, 8, 0, 2031621, 8, 0, 2031622, 8, 0, 2031623, 8, 0, 2031624, 4, 0, 2031630, 3, 0, 2031631, 8, 0, 2031632, 8, 0, 2031633, 8, 0, 2031634, 8, 0, 2031635, 8, 0, 2031636, 8, 0, 2031637, 8, 0, 2031638, 8, 0, 2031639, 8, 0, 2031640, 8, 0, 2031641, 8, 0, 2031642, 8, 0, 2031643, 8, 0, 2031644, 8, 0, 2031645, 8, 0, 2031646, 8, 0, 2031647, 8, 0, 2031648, 8, 0, 2031649, 8, 0, 2031650, 8, 0, 2031651, 4, 0, 2097152, 8, 0, 2097153, 8, 0, 2097154, 8, 0, 2097155, 8, 0, 2097156, 8, 0, 2097157, 8, 0, 2097158, 8, 0, 2097159, 8, 0, 2097160, 4, 0, 2097166, 3, 0, 2097167, 8, 0, 2097168, 8, 0, 2097169, 8, 0, 2097170, 8, 0, 2097171, 8, 0, 2097172, 8, 0, 2097173, 8, 0, 2097174, 8, 0, 2097175, 8, 0, 2097176, 8, 0, 2097177, 8, 0, 2097178, 8, 0, 2097179, 8, 0, 2097180, 8, 0, 2097181, 8, 0, 2097182, 8, 0, 2097183, 8, 0, 2097184, 8, 0, 2097185, 8, 0, 2097186, 8, 0, 2097187, 4, 0, 2162688, 8, 0, 2162689, 8, 0, 2162690, 8, 0, 2162691, 8, 0, 2162692, 8, 0, 2162693, 8, 0, 2162694, 8, 0, 2162695, 8, 0, 2162696, 4, 0, 2162702, 3, 0, 2162703, 8, 0, 2162704, 8, 0, 2162705, 8, 0, 2162706, 8, 0, 2162707, 8, 0, 2162708, 8, 0, 2162709, 8, 0, 2162710, 8, 0, 2162711, 8, 0, 2162712, 8, 0, 2162713, 8, 0, 2162714, 8, 0, 2162715, 8, 0, 2162716, 8, 0, 2162717, 8, 0, 2162718, 8, 0, 2162719, 8, 0, 2162720, 8, 0, 2162721, 8, 0, 2162722, 8, 0, 2162723, 4, 0, 2228224, 8, 0, 2228225, 8, 0, 2228226, 8, 0, 2228227, 8, 0, 2228228, 8, 0, 2228229, 8, 0, 2228230, 8, 0, 2228231, 8, 0, 2228232, 4, 0, 2228238, 3, 0, 2228239, 8, 0, 2228240, 8, 0, 2228241, 8, 0, 2228242, 8, 0, 2228243, 8, 0, 2228244, 8, 0, 2228245, 8, 0, 2228246, 8, 0, 2228247, 8, 0, 2228248, 8, 0, 2228249, 8, 0, 2228250, 8, 0, 2228251, 8, 0, 2228252, 8, 0, 2228253, 8, 0, 2228254, 8, 0, 2228255, 8, 0, 2228256, 8, 0, 2228257, 8, 0, 2228258, 8, 0, 2228259, 4, 0, 2293760, 8, 0, 2293761, 8, 0, 2293762, 8, 0, 2293763, 8, 0, 2293764, 8, 0, 2293765, 8, 0, 2293766, 8, 0, 2293767, 8, 0, 2293768, 4, 0, 2293769, 10, 0, 2293771, 10, 0, 2293773, 10, 0, 2293774, 3, 0, 2293775, 8, 0, 2293776, 8, 0, 2293777, 8, 0, 2293778, 8, 0, 2293779, 8, 0, 2293780, 8, 0, 2293781, 8, 0, 2293782, 8, 0, 2293783, 8, 0, 2293784, 8, 0, 2293785, 8, 0, 2293786, 8, 0, 2293787, 8, 0, 2293788, 8, 0, 2293789, 8, 0, 2293790, 8, 0, 2293791, 8, 0, 2293792, 8, 0, 2293793, 8, 0, 2293794, 8, 0, 2293795, 4, 0, 2359296, 8, 0, 2359297, 8, 0, 2359298, 8, 0, 2359299, 8, 0, 2359300, 8, 0, 2359301, 8, 0, 2359302, 8, 0, 2359303, 8, 0, 2359304, 4, 0, 2359305, 10, 0, 2359307, 10, 0, 2359309, 10, 0, 2359310, 3, 0, 2359311, 8, 0, 2359312, 8, 0, 2359313, 8, 0, 2359314, 8, 0, 2359315, 8, 0, 2359316, 8, 0, 2359317, 8, 0, 2359318, 8, 0, 2359319, 8, 0, 2359320, 8, 0, 2359321, 8, 0, 2359322, 8, 0, 2359323, 8, 0, 2359324, 8, 0, 2359325, 8, 0, 2359326, 8, 0, 2359327, 8, 0, 2359328, 8, 0, 2359329, 8, 0, 2359330, 8, 0, 2359331, 4, 0, 2424832, 8, 0, 2424833, 8, 0, 2424834, 8, 0, 2424835, 8, 0, 2424836, 8, 0, 2424837, 8, 0, 2424838, 8, 0, 2424839, 8, 0, 2424840, 4, 0, 2424846, 3, 0, 2424847, 8, 0, 2424848, 8, 0, 2424849, 8, 0, 2424850, 8, 0, 2424851, 8, 0, 2424852, 8, 0, 2424853, 8, 0, 2424854, 8, 0, 2424855, 8, 0, 2424856, 8, 0, 2424857, 8, 0, 2424858, 8, 0, 2424859, 8, 0, 2424860, 8, 0, 2424861, 8, 0, 2424862, 8, 0, 2424863, 8, 0, 2424864, 8, 0, 2424865, 8, 0, 2424866, 8, 0, 2424867, 4, 0, 2490368, 8, 0, 2490369, 8, 0, 2490370, 8, 0, 2490371, 8, 0, 2490372, 8, 0, 2490373, 8, 0, 2490374, 8, 0, 2490375, 8, 0, 2490376, 8, 0, 2490377, 1, 0, 2490378, 1, 0, 2490379, 1, 0, 2490380, 1, 0, 2490381, 1, 0, 2490382, 8, 0, 2490383, 8, 0, 2490384, 8, 0, 2490385, 8, 0, 2490386, 8, 0, 2490387, 8, 0, 2490388, 8, 0, 2490389, 8, 0, 2490390, 8, 0, 2490391, 8, 0, 2490392, 8, 0, 2490393, 8, 0, 2490394, 8, 0, 2490395, 8, 0, 2490396, 8, 0, 2490397, 8, 0, 2490398, 8, 0, 2490399, 8, 0, 2490400, 8, 0, 2490401, 8, 0, 2490402, 8, 0, 2490403, 4, 0 )

[node name="Lava" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava"]
position = Vector2( 183.814, 567.502 )
shape = SubResource( 1 )

[node name="Puerta" parent="." instance=ExtResource( 4 )]
position = Vector2( 448.268, 341.096 )
next_level = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 62.3606, 469.422 )

[node name="plataforma1" type="Node2D" parent="."]
position = Vector2( 183.252, 481.572 )

[node name="StaticBody2D" type="StaticBody2D" parent="plataforma1"]
position = Vector2( 0, -0.707092 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma1/StaticBody2D"]
shape = SubResource( 2 )

[node name="Plataforma" parent="plataforma1" instance=ExtResource( 5 )]
position = Vector2( 0, 49.617 )

[node name="GrooveJoint2D" type="GrooveJoint2D" parent="plataforma1"]
node_a = NodePath("../Plataforma")
node_b = NodePath("../StaticBody2D")
initial_offset = 1.0

[node name="Boton" parent="plataforma1" instance=ExtResource( 2 )]
position = Vector2( -156.887, -10.1751 )

[node name="plataforma2" type="Node2D" parent="."]
position = Vector2( 339.578, 353.572 )

[node name="StaticBody2D" type="StaticBody2D" parent="plataforma2"]
position = Vector2( 0, -0.707092 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma2/StaticBody2D"]
shape = SubResource( 2 )

[node name="Plataforma" parent="plataforma2" instance=ExtResource( 5 )]
position = Vector2( -0.292877, 122.203 )

[node name="GrooveJoint2D" type="GrooveJoint2D" parent="plataforma2"]
node_a = NodePath("../Plataforma")
node_b = NodePath("../StaticBody2D")
length = 125.0
initial_offset = 1.0

[node name="Boton" parent="plataforma2" instance=ExtResource( 2 )]
position = Vector2( -75.0679, 118.474 )

[node name="TimerDead" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="Lava" to="Lava" method="_on_body_entered"]
[connection signal="hit" from="Lava" to="." method="_on_game_over"]
[connection signal="hitClone" from="Lava" to="." method="_on_delete_clone"]
[connection signal="apretado" from="plataforma1/Boton" to="." method="_on_Boton_apretado"]
[connection signal="apretado" from="plataforma2/Boton" to="." method="_on_Boton2_apretado"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
